--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,9 @@
 .bg-sidebar {
     background-color: #f3f4f6;
 }
-.bg-bacup {
-    background-color: #f3f4f6;
+
+.bg-menu{
+    background-color: #cecfd193;
 }
 
 .bg-darkmode {
